# Fuzzy-pagerank

./: CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
paper/: README.md
scripts/: run_email_eu.py
scripts/legacy/: Mail_eu.py
src/sppr_fuzzy/: __init__.py  email_eu_pipeline.py  pagerank.py  scc.py  widest_path.py
